--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <mysql.version>8.0.28</mysql.version>
         <lombok.version>1.18.28</lombok.version>
         <jjwt.version>0.11.2</jjwt.version>
-        <pagehelper.version>5.1.11</pagehelper.version>
+        <pagehelper.version>1.4.6</pagehelper.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -82,10 +82,10 @@
             <version>${jjwt.version}</version>
         </dependency>
 
-        <!--分页插件-->
+        <!--分页插件启动器，自动帮我们配置了-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>${pagehelper.version}</version>
         </dependency>
     </dependencies>
